Removes escape delay when using tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
 set-option -sa terminal-overrides ",st*:Tc"
 set -g default-terminal "tmux-256color"
+# removes delay when pressing escape
+set -sg escape-time 0
 
