--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,21 @@
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g prefix M-a
+bind M-a send-prefix
+unbind C-b
+
 set-option -sa terminal-overrides ",st*:Tc"
-set -g default-terminal "tmux-256color"
-# removes delay when pressing escape
-set -sg escape-time 0
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
+
+run '/usr/share/tmux-plugin-manager/tpm'
 
