--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@ bind M-a send-prefix
 unbind C-b
 
 set-option -sa terminal-overrides ",st*:Tc"
+set -g default-terminal "tmux-256color"
+set-window-option -g mode-keys vi
 
 bind h select-pane -L
 bind j select-pane -D
@@ -16,6 +18,9 @@ bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 run '/usr/share/tmux-plugin-manager/tpm'
 
