Opens panes in current working directory in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,5 +22,8 @@ bind -r L resize-pane -R 2
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
+bind '"' split-window -v -c "#{pane_current_path}"
+bind '%' split-window -h -c "#{pane_current_path}"
+
 run '/usr/share/tmux-plugin-manager/tpm'
 
