--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,7 @@ bind -r L resize-pane -R 2
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send -X copy-selection
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
